# lognplot

./: .gitignore  .readthedocs.yml  .travis.yml  Cargo.toml  Changelog.md  README.md  design.md
clognplot/: Cargo.toml  README.md
clognplot/src/: client.rs  lib.rs  tsdb.rs
demo/c/: .gitignore  CMakeLists.txt  Makefile  README.md  lognplot.h  main.c
lognplot/: Cargo.toml
lognplot/examples/: perf.rs  plot.rs
lognplot/src/: client.rs  lib.rs  payload.rs
lognplot/src/chart/: axis.rs  chart.rs  curve.rs  mod.rs  text_track.rs
lognplot/src/chart/axis/: date.rs  mod.rs  options.rs  util.rs  value.rs
lognplot/src/geometry/: mod.rs  range.rs  rectangle.rs  size.rs
lognplot/src/net/: client.rs  mod.rs  payload.rs  peer.rs  peer_processor.rs  server.rs
lognplot/src/render/: cairo.rs  cairo_canvas.rs  canvas.rs  chart.rs  layout.rs  mod.rs  options.rs  render.rs  svg_output.rs  transform.rs
lognplot/src/server/: mod.rs  payload.rs  peer.rs  server.rs
lognplot/src/style/: color.rs
lognplot/src/time/: mod.rs  timespan.rs  timestamp.rs
lognplot/src/tracer/: any_tracer.rs  db_tracer.rs  mod.rs  net_tracer.rs  tracer.rs
lognplot/src/tsdb/: aggregation.rs  api.rs  btree.rs  db.rs  handle.rs  metrics.rs  mod.rs  notify.rs  observation.rs  profile.rs  query.rs  query_result.rs  sample.rs  summary.rs  text.rs  trace.rs  track.rs  track_type.rs  void_db.rs
lognplot/src/tsdb/observations/: aggregation.rs  logrecords.rs  metrics.rs  mod.rs  sample.rs  text.rs
lognplotgtk/: .gitignore  Cargo.toml  building.md  funky.py  make_win32_distro.py
lognplotgtk/src/: .gitignore  chart_state.rs  chart_widget.rs  error_dialog.rs  gui.glade  io.rs  main.rs  mainwindow.rs  meta_metrics.rs  mime_types.rs  resources.rs  session.rs  signal_repository.rs  state.rs  time_tracker.rs
python/: .gitignore  README.md  audio_fun.py  autoscope.py  db_demo.py  gui.py  pyproject.toml  server_demo.py  setup.py  softscope.py
python/chart1/: __init__.py  axis.py  btree.py  chart.py  logbar.py  metrics.py  render.py  series.py  test_axis.py  test_btree.py  test_chart.py  test_metrics.py  test_utils.py  utils.py
python/chart1/qt/widgets/: callstackwidget.py
python/docs/: .gitignore  architecture.rst  conf.py  howto.rst  index.rst  installation.rst  motivation.rst  protocol.rst  reference.rst  requirements.txt
python/docs/reference/: chart.rst  index.rst  misc.rst  tsdb.rst
python/lognplot/: __init__.py  __main__.py  axis.py  btree.py  callstackbar.py  chart.py  client.py  demo_data.py  logbar.py  metrics.py  test_axis.py  test_btree.py  test_chart.py  test_metrics.py  tracer.py  utils.py
python/lognplot/chart/: __init__.py  axis.py  chart.py  curve.py  event_tracks.py  legend.py  logbar.py
python/lognplot/qt/: __init__.py  qtapi.py  render.py
python/lognplot/qt/apps/: __init__.py  server_gui.py
python/lognplot/qt/render/: __init__.py  base.py  chart.py  event.py  layout.py  legend.py  log.py  options.py  render.py  render_log.py  transform.py
python/lognplot/qt/widgets/: __init__.py  basewidget.py  callstackwidget.py  chartwidget.py  dashboard.py  db_proxy.py  db_tree_model.py  eventwidget.py  logwidget.py  mime.py  signal_list.py  signal_list_model.py  signal_list_widget.py  softscope.py  timespan_toolbutton.py
python/lognplot/server/: __init__.py  connection.py  peer.py  server.py
python/lognplot/time/: __init__.py  duration.py  timespan.py
python/lognplot/tsdb/: __init__.py  aggregation.py  btree.py  db.py  log.py  metrics.py  series.py  timespan.py
python/lognplot/web/: __init__.py  rest.py
python/test/: test_axis.py  test_btree.py  test_chart.py  test_metrics.py  test_timespan.py  test_utils.py
python/tsdb1/: __init__.py  pager.py
quartz/: Cargo.toml
quartz/examples/: demo.rs  idea2.rs  idea3.rs  idea4.rs  linalg.rs  plot.rs  sdl.rs  triangle.frag  triangle.rs  triangle.vert
quartz/src/: layout.rs  lib.rs  render_gl.rs  widgets.rs
quartz/src/canvas/: canvas.rs  chart_render.rs  mod.rs  softgl.rs  stroke.rs  svg_output.rs  transform.rs
quartz/src/geometry/: mod.rs  point.rs  range.rs  rectangle.rs
quartz/src/gloo/: mod.rs  program.rs  shader.rs  utils.rs
quartz/src/gui/: graph.rs  im.rs  mainapp.rs  mainwindow.rs  mod.rs  text.rs  vertex.rs  visual1.rs  world.rs
quartz/src/gui/backends/: mod.rs  paintable.rs
quartz/src/gui/backends/gl/: mod.rs
quartz/src/gui/backends/vulkan/: canvas.rs  debugging.rs  engine.rs  instance.rs  mod.rs  text.rs
quartz/src/gui/backends/vulkan/visuals/: graph.rs  lines.rs  mod.rs  (+1 more)
quartz/src/gui/visuals/: button.rs  graph.rs  graph_control.rs  mod.rs  rectangle.rs
quartz/src/gui/widgets/: graph.rs  mod.rs
quartz/src/linalg/: matrix.rs  mod.rs
quartz/src/plot/: axis.rs  chart.rs  curve.rs  mod.rs
quartz/src/style/: color.rs  stroke.rs
quartz/src/time/: duration.rs  mod.rs  timespan.rs  timestamp.rs
quartz/src/tsdb/: chunk.rs  connection.rs  db.rs  metrics.rs  mod.rs  peer.rs  query.rs  sample.rs  server.rs  trace.rs
quartz/src/tsdb/datasource/: peer.rs
quartzgtk/: Cargo.toml
quartzgtk/src/: chart_widget.rs  gui.glade  main.rs  mainwindow.rs  signal_repository.rs  state.rs
quartzplot/: Cargo.toml
quartzplot/examples/: plot.rs
quartzplot/src/: axis.rs  chart.rs  curve.rs  lib.rs  render.rs
quartztsdb/: Cargo.toml
quartztsdb/examples/: perf.rs
quartztsdb/src/: btree.rs  chunk.rs  db.rs  handle.rs  lib.rs  metrics.rs  query.rs  trace.rs
quartztsdb/src/datasource/: mod.rs  peer.rs  server.rs
quartztsdb/src/time/: resolution.rs  timespan.rs  timestamp.rs
swviewer/: Cargo.toml  README.md  gui.sh
swviewer/src/: coresight.rs  main.rs  memory.rs  serial_wire_viewer.rs  stlink.rs  symbolscanner.rs  trace_var.rs  ui.rs  ui_logger.rs  usbutil.rs
swviewer/src/coresight/: component.rs  dwt.rs  error.rs  etm.rs  identification.rs  itm.rs  memory.rs  mod.rs  romtable.rs  target.rs  tpiu.rs  trace_protocol.rs
swviewer/src/gtkui/: .gitignore  chip_panel.rs  dialogs.rs  gui.glade  mod.rs  state.rs  swviewer_gui.glade  ui.rs  variable_panel.rs
swviewer/src/textui/: mod.rs  ui.rs  ui_logger.rs
(+79 files in other folders)
