[package]
name = "clognplot"
description = "C wrapper around lognplot library."
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
lognplot = { path = "../lognplot" }
libc = "*"
