[package]
name = "lognplot"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"
description = "Log and plot data"
license = "GPL-3.0-only"
repository = "https://github.com/windelbouwman/quartz"

[features]
cairo = ["cairo-rs"]
server = ["tokio", "futures", "serde", "serde_cbor"]

[dependencies]
log = "0.4"
simple_logger = "1.3"

# Dependencies for cairo:
cairo-rs = { version = "0.7.1", optional = true }

# Dependencies when we require server feature:
tokio = { version = "0.1.22", optional = true }
futures = { version = "0.1.29", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_cbor = { version = "0.10.1", optional = true }
