[package]
name = "lognplotgtk"
description = "Visualization tool for live data."
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
cairo-rs = "0.8"
futures = "0.3"
glib = "0.9"
gio = "0.8"
gtk = "0.8"
gdk = "0.12"
hdf5 = "0.5.2"
lognplot = { path = "../lognplot", features=["cairo", "server"] }
log = "0.4.8"
ndarray = "0.12"
simple_logger = "1.3.0"