[package]
name = "lognplotgtk"
description = "Visualization tool for live data."
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

[features]
export-hdf5 = ["hdf5"]

[dependencies]
clap = "2.33.0"
cairo-rs = "0.8"
futures = "0.3"
glib = "0.9"
gio = "0.8"
gtk = "0.8"
gdk = "0.12"
gdk-pixbuf = "0.8"
hdf5 = { version = "0.6", optional = true }
lognplot = { path = "../lognplot", features=["cairo", "server"] }
log = "0.4.8"
ndarray = "0.12"
serde = "1.0"
serde_json = "1.0"
simple_logger = "1.3.0"