[package]
name = "lognplotgtk"
description = "Visualization tool for live data."
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

[features]
default = ["hdf5"]

# Build without hdf5 using: cargo build --no-default-features

[dependencies]
clap = "2.33.0"
cairo-rs = "0.15"
futures = "0.3"
glib = "0.15"
gio = "0.15"
gtk = "0.15"
gdk = "0.15"
nalgebra = "0.21"
gdk-pixbuf = "0.15"
hdf5 = { version = "0.8", optional = true }
lognplot = { path = "../lognplot", features=["cairo", "server"] }
log = "0.4"
ndarray = "0.15"
serde = "1.0"
serde_json = "1.0"
simple_logger = "2"
url = "2"
