
[package]
name = "quartz"
version = "0.0.0"
edition = "2018"
description = "Plot data using modern GPU hardware"
license = "GPL"
default-run = "quartz"

[lib]
name = "quartz"
path = "src/lib.rs"

[[bin]]
name = "quartz"
path = "src/bin/quartz.rs"

[dependencies]
bytes = "0.4.12"
cassowary = "0.3.0"
cgmath = "0.17.0"
chrono = "0.4.9"
log = "0.4.8"
num-traits = "0.2.8"
rusttype = "0.8.0"
serde_cbor = "0.10.1"
simple_logger = "1.3.0"
vulkano = "0.14.0"
vulkano-shaders = "0.14.0"
winit = "0.19.3"
vulkano-win = "0.14.0"
