[package]
name = "quartzgtk"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cairo-rs = "0.7.1"
gio = "0.7.0"
gtk = "0.7.0"
gdk = "0.11"
quartzcanvas = { path = "../quartzcanvas" }
quartzplot = { path = "../quartzplot" }
simple_logger = "1.3.0"
log = "0.4.8"
