[package]
name = "quartzplot"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quartztsdb = {version = "0.1.0", path = "../quartztsdb" }
quartzcanvas = { path = "../quartzcanvas" }
log = "0.4.8"
simple_logger = "1.3.0"
