[package]
name = "quartztsdb"
version = "0.1.0"
description = "Time series database library"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
tokio = "0.1.22"
futures = "0.1.29"
serde = { version = "1.0.101", features = ["derive"] }
serde_cbor = "0.10.1"
