[package]
name = "swviewer"
version = "0.1.0"
authors = ["Windel Bouwman <windel@windel.nl>"]
edition = "2018"
description = "Connect to microcontroller via ST-link-v2 and read variable changes via serial wire (SWV)"

[dependencies]
clap = "2.33"
gimli = "0.20"
log = "0.4.8"
object = "0.17"
rusb = "0.5"
simple_logger = "1.6"
scroll = "0.10"
lognplot = { path = "../lognplot" }

crossterm = "0.14"
tui = { version = "0.8", default-features = false, features = ['crossterm'] }
